--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
           <a href="about.html">關於宏泰人壽</a>
         </li>
         <li>
-          <a href="javascropt:;">公平待客</a>
+          <a href="services.html">公平待客</a>
         </li>
         <li>
-          <a href="javascropt:;">宏泰 i 公益</a>
+          <a href="charity.html">宏泰 i 公益</a>
         </li>
       </ul>
     </div>
