--- a/services.html
+++ b/services.html
@@ -16,9 +16,15 @@
     </div>
     <div class="list">
       <ul>
-        <li>關於宏泰人壽</li>
-        <li>公平待客</li>
-        <li>宏泰 i 公益</li>
+        <li>
+          <a href="about.html">關於宏泰人壽</a>
+        </li>
+        <li>
+          <a href="services.html">公平待客</a>
+        </li>
+        <li>
+          <a href="charity.html">宏泰 i 公益</a>
+        </li>
       </ul>
     </div>
   </div>
