--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
 <body>
   <div class="navbar">
     <div class="logo">
-      <a href="javascript:;">
+      <a href="index.html">
         <img width="202" height="40" src="https://www.hontai.com.tw/18pages/friendly-services/styles/images/common/logo.png" alt="">
       </a>
       <p>金融友善服務專區</p>
