--- a/charity.html
+++ b/charity.html
@@ -9,22 +9,16 @@
 <body>
   <div class="navbar">
     <div class="logo">
-      <a href="index.html">
+      <a href="javascript:;">
         <img width="202" height="40" src="https://www.hontai.com.tw/18pages/friendly-services/styles/images/common/logo.png" alt="">
       </a>
       <p>金融友善服務專區</p>
     </div>
     <div class="list">
       <ul>
-        <li>
-          <a href="about.html">關於宏泰人壽</a>
-        </li>
-        <li>
-          <a href="services.html">公平待客</a>
-        </li>
-        <li>
-          <a href="charity.html">宏泰 i 公益</a>
-        </li>
+        <li>關於宏泰人壽</li>
+        <li>公平待客</li>
+        <li>宏泰 i 公益</li>
       </ul>
     </div>
   </div>
@@ -39,7 +33,7 @@
   </div>
   <div class="outline">
     <p class="b">66持續，讓愛永續</p>
-    <p>宏泰人壽全力推動公益，2023年於象徵著「六六大順」的6月6日宣示「66持續，讓愛永續」，以6「心」級服務精神為核心，聚焦公益6大面向，在微型保險贊助、捐血助人、環境保護、偏鄉關懷、寒士關懷及身障關懷各面向善盡企業社會責任，全方位關懷社會弱勢族群，讓善的力量如漣漪一般持續擴散，幫助更多需要幫助的人。<br /><br />弱勢族群是台灣社會真實的存在，需要獲得關注及持續性的協助，因此我們特別擇定於象徵著「六六大順」的6月6日，宣示從「66持續，讓愛永續」的理念出發，將6「心」級服務精神的「全心、用心、真心、貼心、關心、同理心」貫徹於公益6大面向，讓善的正向力量從核心持續向外擴散，進而讓更多有需要的人因此獲得關懷與幫助。</p>
+    <p>宏泰人壽全力推動公益，2023年於象徵著「六六大順」的6月6日宣示「66持續，讓愛永續」，以6「心」級服務精神為核心，聚焦公益6大面向，在微型保險贊助、捐血助人、環境保護、偏鄉關懷、寒士關懷及身障關懷各面向善盡企業社會責任，全方位關懷社會弱勢族群，讓善的力量如漣漪一般擴散，幫助更多需要幫助的人。<br /><br />弱勢族群是台灣社會真實的存在，需要獲得關注及持續性協助，因此我們特別擇定象徵著「六六大順」的6月6日，宣示從「66持續，讓愛永續」理念出發，將6「心」級服務精神「全心、用心、真心、貼心、關心、同理心」貫徹於公益6大面向，讓善的正向力量從核心持續向外擴散，進而讓更多有需要的人因此獲得關懷與幫助。</p>
   </div>
 </body>
 </html>
