--- a/about.html
+++ b/about.html
@@ -9,22 +9,16 @@
 <body>
   <div class="navbar">
     <div class="logo">
-      <a href="index.html">
+      <a href="javascript:;">
         <img width="202" height="40" src="https://www.hontai.com.tw/18pages/friendly-services/styles/images/common/logo.png" alt="">
       </a>
       <p>金融友善服務專區</p>
     </div>
     <div class="list">
       <ul>
-        <li>
-          <a href="about.html">關於宏泰人壽</a>
-        </li>
-        <li>
-          <a href="services.html">公平待客</a>
-        </li>
-        <li>
-          <a href="charity.html">宏泰 i 公益</a>
-        </li>
+        <li>關於宏泰人壽</li>
+        <li>公平待客</li>
+        <li>宏泰 i 公益</li>
       </ul>
     </div>
   </div>
