--- a/services.html
+++ b/services.html
@@ -9,22 +9,16 @@
 <body>
   <div class="navbar">
     <div class="logo">
-      <a href="index.html">
+      <a href="javascript:;">
         <img width="202" height="40" src="https://www.hontai.com.tw/18pages/friendly-services/styles/images/common/logo.png" alt="">
       </a>
       <p>金融友善服務專區</p>
     </div>
     <div class="list">
       <ul>
-        <li>
-          <a href="about.html">關於宏泰人壽</a>
-        </li>
-        <li>
-          <a href="services.html">公平待客</a>
-        </li>
-        <li>
-          <a href="charity.html">宏泰 i 公益</a>
-        </li>
+        <li>關於宏泰人壽</li>
+        <li>公平待客</li>
+        <li>宏泰 i 公益</li>
       </ul>
     </div>
   </div>
@@ -38,7 +32,7 @@
     </div>
   </div>
   <div class="outline">
-    <p class="b">董事長的話</p>
+    <p class="b">三大理念 六大心念</p>
     <p>一直以來，宏泰人壽秉持著「以客戶為中心」的保險經營理念，以「穩健發展，專注本業」、「誠信經營，信守承諾」、「關懷生命，用愛承擔」之「三大理念」，與「全心」、「用心」、「真心」、「貼心」、「關心」及「同理心」之「六大心念」，為保戶提供最優質的保險服務。<br /><br />客戶是公司存在的根本，因此宏泰人壽上自董事會下至全體員工深深理解，公司最重要的核心文化就是「公平待客」，唯有公平對待所有客戶，贏得客戶的信賴與支持，公司方能永續經營。過去我們重視客戶滿意度，現在我們強調顧客的滿意從「公平待客」做起，將「公平待客十大原則」融入企業文化，時刻謹記並遵循不悖，全力貫徹於工作日常及各項作業流程。</p>
   </div>
 </body>
